roles/workshop/files/network_policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-all-namespaces
spec:
  ingress:
  - from:
    - namespaceSelector: {}
  podSelector: {}
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-ingress-namespace
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          network-policy: global
  podSelector: null
